feat: local speach model
