# shared/api/openapi.yaml
@@ -2681,7 +2681,7 @@ paths:
           application/json:
             schema:
               type: object
-              required: [name, description, used_file_ids]
+              required: [name, description, used_file_ids, voice_style]
               properties:
                 description:
                   type: string
@@ -2694,6 +2694,9 @@ paths:
                   items:
                     type: string
                     format: uuid
+                voice_style:
+                  type: string
+                  description: 'One of: F1, F2, F3, F4, F5, M1, M2, M3, M4, M5'
         required: true
       responses:
         '200':
